tests/error/vararg_invalid_acces.gw
#! [contains] InvalidVariadicAccess
fun void test(...) {
  vararg.start;
  <<<vararg.i>>>;
  vararg.end;
}
@(1.3) => test;
